@@ -12,7 +12,7 @@ file for further details. Here are various details:
 
 * Isabelle/jEdit: improved monitoring of Java and ML process.
 
-* Isabelle/jEdit: various IDE feedback improvements.
+* Isabelle/jEdit: look-and-feel and IDE feedback improvements.
 
 * Pure: improved handling of named contexts and local syntax bundles.
 
